fixed issue with images height on mobiles, added location and map - iframe - section

--- a/queries.css
+++ b/queries.css
@@ -109,6 +109,7 @@
   }
   .clientContainer img {
     width: 80%;
+    height: 50%;
     border-radius: 11px;
     box-shadow: 0px 0px 5px 1px var(--loungeImageShadow);
   }
@@ -116,6 +117,14 @@
     margin: 0 1rem;
     text-align: center;
   }
-
   /* Dining Area  */
+  /* Location */
+  .locationSection {
+    display: flex;
+    justify-content: center;
+  }
+  iframe {
+    width: 90%;
+    height: auto;
+  }
 }
